add time_script to before_script too

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,7 @@ build_dep_wheels:
     matrix:
       - DOCKER_ARCH: [amd64, i386, arm64v8, arm32v7]
   before_script:
+    - *time_script
     - >
       apk add
       alpine-sdk
