--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,7 +103,7 @@ build_dep_wheels:
       # correct the wheel tagging needed to workaround maturin and other 3-rd party packagers problems on multi-arch envs..
       # https://github.com/PyO3/maturin/issues/1289 but appears on other arches and packagers too
       for wheel in wheelhouse/* ; do
-        [ "$wheel" = 'wheelhouse/*' ] || continue
+        [ "$wheel" = 'wheelhouse/*' ] && continue
         echo "Correcting tags for $wheel"
         corrected_tag="$(python3 -c "import auditwheel.wheel_abi; print(auditwheel.wheel_abi.analyze_wheel_abi('$wheel').overall_tag)" || true)"
         [[ "$wheel" = "*$corrected_tag*" ]] && { echo 'Tag already correct or correct tag is unknown - skipping.' ; continue ; }
@@ -118,7 +118,7 @@ build_dep_wheels:
     - |
       # prepare musllinux universal wheels
       for wheel in wheelhouse/* ; do
-        [ "$wheel" = 'wheelhouse/*' ] || continue
+        [ "$wheel" = 'wheelhouse/*' ] && continue
         echo "Fixing $wheel"
         auditwheel repair --strip "$wheel" || true
       done
@@ -128,7 +128,7 @@ build_dep_wheels:
     - |
       # upload wheels to gitlab package repository
       for wheel in wheelhouse/* ; do
-        [ "$wheel" = 'wheelhouse/*' ] || continue
+        [ "$wheel" = 'wheelhouse/*' ] && continue
         echo "Uploading $wheel"
         TWINE_USERNAME=gitlab-ci-token TWINE_PASSWORD=${CI_JOB_TOKEN} twine upload --disable-progress-bar --repository-url "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi" "$wheel" || true
       done
