--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,5 @@
   "i18n-ally.localesPaths": ["front/src/locales"],
   "i18n-ally.pathMatcher": "{locale}.json",
   "i18n-ally.enabledFrameworks": ["vue"],
-  "i18n-ally.keystyle": "nested",
-  "i18n-ally.keepFulfilled": true
+  "i18n-ally.keystyle": "nested"
 }
