--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
   "vitest.enable": true,
   "vitest.commandLine": "yarn vitest",
   "i18n-ally.localesPaths": ["front/src/locales"],
-  "i18n-ally.pathMatcher": "*.json",
+  "i18n-ally.pathMatcher": "{locale}.json",
   "i18n-ally.enabledFrameworks": ["vue"],
   "i18n-ally.keystyle": "nested"
 }
