--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -285,6 +285,8 @@ build_openapi_schema:
 build_documentation:
   stage: build
   image: python:3.11
+  needs:
+    - build_openapi_schema
   dependencies:
     - build_openapi_schema
   variables:
