--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -358,7 +358,7 @@ build_api:
     - rm -rf api/tests
     - >
       if [ "$CI_COMMIT_REF_NAME" == "develop" ] || [ "$CI_COMMIT_REF_NAME" == "stable" ]; then
-        ./scripts/set-api-build-metadata.sh $(echo $CI_COMMIT_SHA | cut -c 1-8);
+        ./scripts/set-api-build-metadata.sh $CI_COMMIT_SHORT_SHA;
       fi
   artifacts:
     name: api_${CI_COMMIT_REF_NAME}
