fix: timeout on spa manifest requests
The previous behaviour had a loop of requests between the front
app and the api when querying the pwa manifest.

This reduce the coupling around the pwa manifest file between the api
and the front app, by uplicating the files so each "service" has a copy
of it, while keeping them in sync and having the front pwa manifest as
single source of truth.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,3 +62,13 @@ repos:
     rev: v0.8.0.4
     hooks:
       - id: shellcheck
+
+  - repo: local
+    hooks:
+      - id: pwa-manifest.json
+        name: pwa-manifest.json
+        description: Sync pwa-manifest.json
+        entry: scripts/sync-pwa-manifest.sh
+        pass_filenames: false
+        language: script
+        files: pwa-manifest.json$
