--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -6,16 +6,17 @@ authors = ["Funkwhale Collective <contact@funkwhale.audio>"]
 license = "AGPLv3"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-Sphinx = "==5.3.0"
-sphinx-rtd-theme = "==1.1.1"
-django-environ = "==0.9.0"
-myst-parser = "==0.18.1"
-Django = "==4.1.5"
-sphinx-multiversion = "0.2.4"
-sphinx-intl = "2.0.1"
+python = "^3.9"
+sphinx = "==5.3.0"
 sphinx_design = "==0.3.0"
+sphinx-intl = "2.0.1"
+sphinx-multiversion = "0.2.4"
+sphinx-rtd-theme = "==1.1.1"
 sphinxcontrib-mermaid = "0.7.1"
+myst-parser = "==0.18.1"
+
+django = "==3.2.16"
+django-environ = "==0.9.0"
 
 [tool.poetry.dev-dependencies]
 
