fixed nginx template

--- a/deploy/nginx.template
+++ b/deploy/nginx.template
@@ -145,7 +145,7 @@ server {
         # has been checked on API side.
         # Set this to the same value as your MUSIC_DIRECTORY_PATH setting.
         internal;
-        alias   ${MUSIC_DIRECTORY_SERVE_PATH};
+        alias   ${MUSIC_DIRECTORY_SERVE_PATH}/;
         add_header Access-Control-Allow-Origin '*';
     }
 
