fix: Make sure funkwhale_api package and metadata are available for docs
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2374>

--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -17,6 +17,7 @@ myst-parser = "==0.18.1"
 
 django = "==3.2.18"
 django-environ = "==0.9.0"
+funkwhale-api = {path = "../api"}
 
 [tool.poetry.dev-dependencies]
 
