--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -68,6 +68,7 @@ uvicorn = { version = "==0.20.0", extras = ["standard"] }
 # Libs
 aiohttp = "==3.8.4"
 arrow = "==1.2.3"
+backports-zoneinfo = { version = "==0.2.1", python = "<3.9" }
 bleach = "==5.0.1"
 boto3 = "==1.26.99"
 click = "==8.1.3"
@@ -79,7 +80,6 @@ pillow = "==9.3.0"
 pydub = "==0.25.1"
 pyld = "==2.0.3"
 python-magic = "==0.4.27"
-pytz = "==2022.7.1"
 requests = "==2.28.2"
 requests-http-message-signatures = "==0.3.1"
 sentry-sdk = "==1.12.1"
