fix: Make development docs available again

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -387,14 +387,15 @@ deploy_docs:
   needs:
     - job: build_docs
       artifacts: true
-  rules:
-    - if: $CI_COMMIT_BRANCH == "stable"
+  only:
+    - develop@funkwhale/funkwhale
+    - stable@funkwhale/funkwhale
 
   image: $CI_REGISTRY/funkwhale/ci/python:3.11
   variables:
     GIT_STRATEGY: none
   script:
-    - rsync -r -e "ssh -p 2282" $CI_PROJECT_DIR/public/ docs@docs.funkwhale.audio:/htdocs/
+    - rsync -r -e "ssh -p 2282" $CI_PROJECT_DIR/public/ docs@docs.funkwhale.audio:/htdocs/$CI_COMMIT_REF_NAME
 
 .docker:
   interruptible: false
