--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -289,9 +289,9 @@ deploy_documentation:
     - eval `ssh-agent -s`
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
   script:
-    - rsync -r -e "ssh -p 2282" $CI_PROJECT_DIR/public/ docs@docs.funkwhale.audio:/htdocs/
-  only:
-    - stable
+    - rsync -r -e "ssh -p 2282" $CI_PROJECT_DIR/public/ docs@docs.funkwhale.audio:/htdocs/$CI_COMMIT_REF_NAME
+  rules:
+    - if: $CI_COMMIT_BRANCH =~ /(stable|develop)/
 
 
 .docker_publish:
